--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4000720240327002",
     "@dcloudio/uni-mp-xhs": "3.0.0-4000720240327002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4000720240327002",
+    "axios": "^1.6.8",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.10",
+    "pinia": "^2.1.7",
+    "qs": "^6.12.0",
+    "uview-plus": "^3.1.49",
     "vue": "^3.3.11",
     "vue-i18n": "^9.1.9"
   },
@@ -64,6 +70,10 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4000720240327002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4000720240327002",
     "@vue/runtime-core": "^3.3.11",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.24.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^10.5.2",
     "vite": "4.3.5"
   }
 }
